# tree-sitter-jinja2

./: .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  foo.yml.j2  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test-template.j2  tree-sitter.json
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jinja2/: __init__.py
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJinja2Tests/: TreeSitterJinja2Tests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
