[package]
name = "tree-sitter-jinja2"
description = "Tree sitter parser for Ansible Jinja2 templates"
version = "0.1.0"
authors = ["Roberto Alfieri <me@rebtoor.com>"]
license = "Apache-2"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jinja2"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/rebtoor/tree-sitter-ansible-jinja2"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
