[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-jinja2"
description = "Tree sitter parser for Ansible Jinja2 templates"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "jinja2"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Roberto Alfieri", email = "me@rebtoor.com" }]
requires-python = ">=3.10"
license.text = "Apache-2"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rebtoor/tree-sitter-ansible-jinja2"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
